--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <executions>
@@ -109,7 +109,7 @@
                     </configuration>
                 </execution>
             </executions>
-        </plugin> -->
+        </plugin>
 		</plugins>
 	</build>
 
